tests/fixtures/invalid/str_notin_int.py
# Cannot use 'not in' with Str and Int
x: bool = "hello" not in 1
